--- a/asset/css/custom.css
+++ b/asset/css/custom.css
@@ -35,8 +35,56 @@ body {
 }
 
 /*form-group*/
-.form-group {
-	padding: 40px;
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 0.25rem);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 0.125rem solid #ced4da;
+  border-radius: 0.5rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+/*Overlay for link*/
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #ddd;
+  color: #222;
+  font-size: 16px;
+  padding: 16px 32px;
 }
 
 /*Colours Override*/
